[workspace]
default-members = ["lib/*"]
members = ["lib/*"]

[workspace.package]
categories = [
        "no-std",
        "os",
]
edition = "2021"
homepage = "https://github.com/runtime11/runtime11"
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/runtime11/runtime11"
rust-version = "1.74"

[profile.dev]
debug = false
panic = "abort"

[profile.release]
debug = false
panic = "abort"
