[package]
name = "rt11-entrypoint"
version = "0.1.0"

categories = [
        "no-std",
        "os",
]
description = "Linux ELF Entrypoint Generator"
edition = "2021"
homepage = "https://github.com/runtime11/runtime11"
keywords = [
        "binary",
        "elf",
        "entrypoint",
        "executable",
        "loader",
]
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/runtime11/runtime11"

[dev-dependencies]
rt11-ffi-elf = { path = "../rt11-ffi-elf" }
