[package]
name = "rt11-ffi-linux"
version = "0.1.0"

categories = [
        "no-std",
        "os",
]
description = "Definitions of the Linux Kernel Interfaces"
edition = "2021"
homepage = "https://github.com/runtime11/runtime11"
keywords = [
        "abi",
        "api",
        "ffi",
        "kernel",
        "linux",
]
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/runtime11/runtime11"
